@@ -22,7 +22,8 @@ version 0.2 (20??-??-??):
 	spectrumctl:
 	* The script now does rigorous checking of ownership and permissions
 	  on all the important files and directories.
-	* Accept $filename as variable
+	* Accept $filename:jid, $filename:port and $filename:protocol as 
+	  variable
 	* Statistics gathering via config_interface
 	* Two new command-line options: --no-daemon and --debug.
 	* env-variable SPECTRUM_PATH can now configure how spectrumctl is
